<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <!--<item
        android:id="@+id/cartIcon"
        android:icon="@drawable/ic_menu_notifications"
        android:orderInCategory="130"
        android:title=""
        android:visible="false"
        app:showAsAction="always" />-->
    <item
        android:id="@+id/searchIcon"
        android:icon="@drawable/search_icon_white"
        android:orderInCategory="120"
        android:title=""
        android:visible="false"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/cartIconempty"
        android:icon="@drawable/ic_menu_notifications"
        android:orderInCategory="110"
        android:title=""
        android:visible="false"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/userName"
        android:orderInCategory="90"
        android:title="@string/app_name"
        android:visible="true"

        app:showAsAction="ifRoom|withText" />


    <item
        android:id="@+id/editIcon"
        android:icon="@drawable/edit_icon"
        android:orderInCategory="100"
        android:title=""
        android:visible="false"
        app:showAsAction="always|withText" />



    <item
        android:id="@+id/action_search"
        android:title="Search"
        android:visible="true"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/hideMapView"
        android:title="@string/hide_map"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/showMapView"
        android:title="@string/show_map"
        android:visible="false"
        app:showAsAction="never" />


</menu>
