<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainloginview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_16"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/loginForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_16"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/logo"
                    android:tint="@color/colorPrimary"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp_5"
                        android:theme="@style/LoginTextLabel">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtEmail"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp_5"
                        android:theme="@style/LoginTextLabel">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/edtPassword"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.saveup.views.RippleView
                        android:id="@+id/button_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_16"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:padding="@dimen/dp_10"
                        android:text="@string/login"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/forgotPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:paddingBottom="@dimen/dp_10"
                        android:text="@string/forget_password"
                        android:textColor="@color/app_txt_dark_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/or_connect_with"
                        android:textColor="@color/black"
                        android:visibility="visible"/>

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/loginFacebookButton"
                        style="@style/FacebookLoginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/white"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="30dp"
                        android:visibility="gone"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <com.saveup.views.RippleView
                            android:id="@+id/button_facebook_login"
                            android:layout_width="0dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="@dimen/dp_20"
                            android:layout_marginBottom="@dimen/dp_16"
                            android:background="@drawable/background_facebook"
                            android:gravity="center"
                            android:text="@string/facebook"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:visibility="visible"
                            android:layout_weight="1"
                            android:elevation="3dp"/>

                        <com.saveup.views.RippleView
                            android:id="@+id/google_sign_in_button"
                            android:layout_width="0dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="@dimen/dp_20"
                            android:layout_marginBottom="@dimen/dp_16"
                            android:background="@drawable/google_sign_in"
                            android:gravity="center"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:visibility="visible"
                            android:layout_weight="1"
                            android:elevation="3dp"/>

                       <!-- <com.google.android.gms.common.SignInButton
                            android:id="@+id/google_sign_in_button"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_marginBottom="@dimen/dp_16"
                            android:layout_marginTop="@dimen/dp_16"
                            android:layout_weight="1"/>-->

                    </LinearLayout>



                    <com.saveup.views.RippleView
                        android:id="@+id/button_guest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/dp_16"
                        android:layout_marginTop="@dimen/dp_16"
                        android:background="@color/black"
                        android:gravity="center"
                        android:padding="@dimen/dp_10"
                        android:text="@string/guest"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/registerButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/dp_10"
                        android:text="@string/new_register"
                        android:textColor="@color/app_txt_dark_gray"
                        android:textStyle="bold"
                        android:layout_marginBottom="@dimen/dp_10"/>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>