<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/mainTopLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5"
                android:layout_toLeftOf="@+id/new_show_hide"
                android:theme="@style/TextLabelWhite">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtNewPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_new_password"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/new_show_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/show"
                android:padding="10dp"
                android:textColor="@color/colorAccent" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_5">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5"
                android:layout_toLeftOf="@+id/confirm_show_hide"
                android:theme="@style/TextLabelWhite">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtConfirmPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_conform_password"
                    android:inputType="textPassword"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/confirm_show_hide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/show"
                android:padding="10dp"
                android:textColor="@color/colorAccent"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <com.saveup.views.RippleView
            android:id="@+id/button_changepassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_16"
            android:background="@drawable/button_login"
            android:gravity="center"
            android:padding="@dimen/dp_10"
            android:textAllCaps="false"
            android:textSize="18dp"
            android:text="@string/changepassword"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>